# destiel_news_bot

./: .gitignore  Cargo.toml  config.json  mypy.ini  requirements.txt  requirements_dev.txt  sources.json
destielbot/: news.py
src/: cli.rs  image.rs  lib.rs  main.rs  news.rs  tumblr.rs
