[package]
name = "destielbot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
custom_debug = "0.5.1"
futures = "0.3.28"
miette = { version = "5.7.0", features = ["fancy"] }
reqwest = "0.11.16"
schemars = { version = "0.8.12", features = ["url"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.12"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = { version = "2.3.1", features = ["serde"] }
