[package]
name = "destielbot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.17.0", default-features = false, features = ["png"] }
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.1", features = ["derive"] }
custom_debug = "0.5.1"
futures = "0.3.28"
miette = { version = "5.7.0", features = ["fancy"] }
oauth2 = { version = "4.3.0", features = ["reqwest"] }
pango = { version = "0.17.4", features = ["v1_50"] }
pangocairo = "0.17.0"
reqwest = { version = "0.11.16", features = ["json", "multipart"] }
schemars = { version = "0.8.12", features = ["url"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full", "time"] }
tokio-stream = "0.1.12"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tumblr_api = { git = "https://github.com/adrianmgg/tumblr_api", rev = "1cc22e10270042ced31e3acea3c1136c628423ba" }
url = { version = "2.3.1", features = ["serde"] }
